-- This script was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://redmine.postgresql.org/projects/pgadmin4/issues/new if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public."User"
(
    id integer NOT NULL,
    email character varying(50) COLLATE pg_catalog."default",
    "firstName" character varying(50) COLLATE pg_catalog."default",
    "lastName" character varying(50) COLLATE pg_catalog."default",
    "phoneNumber" integer,
    username character varying(50) COLLATE pg_catalog."default",
    password character varying(50) COLLATE pg_catalog."default",
    role character varying(6) COLLATE pg_catalog."default",
    balance integer,
    CONSTRAINT "User_pkey" PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.materials
(
    id integer NOT NULL,
    pillar_id integer,
    strap_id integer,
    rafter_id integer,
    CONSTRAINT materials_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public."order"
(
    id integer NOT NULL,
    status character varying(30) COLLATE pg_catalog."default",
    date date,
    user_id integer NOT NULL,
    materials_id integer,
    total_price double precision,
    CONSTRAINT order_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.pillar
(
    id integer NOT NULL,
    height double precision,
    width double precision,
    length double precision,
    CONSTRAINT pillar_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.rafter
(
    id integer NOT NULL,
    height double precision,
    width double precision,
    length double precision,
    CONSTRAINT rafter_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.strap
(
    id integer NOT NULL,
    height double precision,
    width double precision,
    length double precision,
    CONSTRAINT strap_pkey PRIMARY KEY (id)
);

ALTER TABLE IF EXISTS public.materials
    ADD CONSTRAINT materials_pillar_id_fkey FOREIGN KEY (pillar_id)
    REFERENCES public.pillar (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.materials
    ADD CONSTRAINT materials_rafter_id_fkey FOREIGN KEY (rafter_id)
    REFERENCES public.rafter (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.materials
    ADD CONSTRAINT materials_strap_id_fkey FOREIGN KEY (strap_id)
    REFERENCES public.strap (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public."order"
    ADD CONSTRAINT order_materials_id_fkey FOREIGN KEY (materials_id)
    REFERENCES public.materials (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public."order"
    ADD CONSTRAINT user_id FOREIGN KEY (user_id)
    REFERENCES public."User" (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;

END;