package app.entities;

public class Receipt {
}
