package app.persistence;

public class ItemMapper {
    
}
